// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseRouterForm initializes 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
    />
  }
  headerClass="wait_for_response"
  title="Wait for Response"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
        "visibility": Array [
          "messaging",
          "messaging_offline",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    If the message response...
  </div>
  <CaseList
    cases={
      Array [
        Object {
          "categoryName": "Red",
          "kase": Object {
            "arguments": Array [
              "red",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_any_word",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
          "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          "valid": true,
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Color",
      }
    }
  />
</Dialog>
`;

exports[`ResponseRouterForm initializes case config 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
    />
  }
  headerClass="wait_for_response"
  title="Wait for Response"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
        "visibility": Array [
          "messaging",
          "messaging_offline",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    If the message response...
  </div>
  <CaseList
    cases={
      Array [
        Object {
          "categoryName": "Red",
          "kase": Object {
            "arguments": Array [
              "5",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_date_eq",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
          "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          "valid": true,
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Color",
      }
    }
  />
</Dialog>
`;

exports[`ResponseRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
      timeout={0}
    />
  }
  headerClass="wait_for_response"
  title="Wait for Response"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
        "visibility": Array [
          "messaging",
          "messaging_offline",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    If the message response...
  </div>
  <CaseList
    cases={Array []}
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Result",
      }
    }
  />
</Dialog>
`;

exports[`ResponseRouterForm updates should save changes 1`] = `
Object {
  "cases": Array [
    Object {
      "categoryName": "Red",
      "kase": Object {
        "arguments": Array [
          "red",
        ],
        "type": "has_any_word",
      },
      "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
      "valid": true,
    },
    Object {
      "categoryName": "Red",
      "kase": Object {
        "arguments": Array [
          "maroon",
        ],
        "type": "has_any_word",
      },
      "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
      "valid": true,
    },
    Object {
      "categoryName": "Green",
      "kase": Object {
        "arguments": Array [
          "green",
        ],
        "type": "has_any_word",
      },
      "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
      "valid": true,
    },
  ],
  "resultName": Object {
    "value": "Favorite Color",
  },
  "timeout": 180,
  "valid": true,
}
`;

exports[`ResponseRouterForm updates should save changes 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        },
        Object {
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
        Object {
          "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
        },
        Object {
          "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
            "type": "has_any_word",
          },
          Object {
            "arguments": Array [
              "maroon",
            ],
            "category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
            "type": "has_any_word",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "category_uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
            "type": "has_any_word",
          },
          Object {
            "arguments": Array [
              "@run",
            ],
            "category_uuid": "f05fa107-03db-4315-a211-53da63603e6f",
            "omit_operand": true,
            "type": "has_wait_timed_out",
            "uuid": "141e0356-9fdd-47d3-a12d-16efc5b45276",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
            "name": "Red",
            "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
          },
          Object {
            "exit_uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
            "name": "Green",
            "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
          },
          Object {
            "exit_uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
            "name": "Other",
            "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
          },
          Object {
            "exit_uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
            "name": "No Response",
            "uuid": "f05fa107-03db-4315-a211-53da63603e6f",
          },
        ],
        "default_category_uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
        "operand": "@input",
        "result_name": "Favorite Color",
        "type": "switch",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      "wait": Object {
        "timeout": 180,
        "type": "msg",
      },
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;

exports[`ResponseRouterForm updates should save save config for relative dates 1`] = `
Object {
  "cases": Array [
    Object {
      "categoryName": "In the Zone",
      "kase": Object {
        "arguments": Array [
          "5",
        ],
        "type": "has_date_gt",
      },
      "uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
      "valid": true,
    },
  ],
  "resultName": Object {
    "value": "Result",
  },
  "timeout": 0,
  "valid": true,
}
`;

exports[`ResponseRouterForm updates should save save config for relative dates 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
        },
        Object {
          "uuid": "431978dd-6b18-4e25-86f1-11835491a9c9",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "@(datetime_add(today(), 5, \\"D\\"))",
            ],
            "category_uuid": "dd57500e-a8e8-4a98-8b5b-a33637523a8d",
            "type": "has_date_gt",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
            "name": "In the Zone",
            "uuid": "dd57500e-a8e8-4a98-8b5b-a33637523a8d",
          },
          Object {
            "exit_uuid": "431978dd-6b18-4e25-86f1-11835491a9c9",
            "name": "Other",
            "uuid": "3d8db86c-7279-4106-a388-3f143bd5623f",
          },
        ],
        "default_category_uuid": "3d8db86c-7279-4106-a388-3f143bd5623f",
        "operand": "@input",
        "result_name": "Result",
        "type": "switch",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "config": Object {
        "cases": Object {
          "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c": Object {
            "arguments_1": Array [
              "5",
            ],
          },
        },
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;
